# toy-embedder

./: .gitignore  .gn  BUILD.gn  BUILDCONFIG.gn  DEPS  README.md  gn
.github/workflows/: analyze.yml  build.yml  check-symbols.yml
example/dotnet-host/: App.cs  FlutterApplication.csproj  FlutterApplication.sln  tizen-manifest.xml
example/dotnet-host/res/flutter_assets/: NOTICES
src/: BUILD.gn  flutter_application.cc  flutter_application.h  flutter_tizen.cc  logger.h  tizen_display.cc  tizen_display.h  utils.cc  utils.h  vsync_handler.cc  vsync_handler.h  vsync_waiter.cc  vsync_waiter.h
src/public/: flutter_export.h  flutter_tizen.h
test/: README.md
test/dotnet-host/: App.cs  tizen-manifest.xml
test/dotnet-host/res/flutter_assets/: .last_build_id
tools/: check_symbols.py  download_engine.py  gn
