shared_library("flutter_embedder") {
  include_dirs = [
    root_out_dir
  ]

  lib_dirs = [
    root_out_dir
  ]

  sources = [
    "flutter_application.h",
    "flutter_application.cc",
    "tizen_display.h",
    "tizen_display.cc",
    "vsync_handler.h",
    "vsync_handler.cc",
    "utils.h",
    "utils.cc",
  ]
  
  libs = [
    "flutter_engine",
    "tdm-client"
  ]
}
