shared_library("flutter_embedder") {
  include_dirs = [
    root_out_dir,
    "public"
  ]

  lib_dirs = [
    root_out_dir
  ]

  sources = [
    "flutter_tizen.h",
    "flutter_tizen.cc",
    "flutter_application.h",
    "flutter_application.cc",
    "tizen_display.h",
    "tizen_display.cc",
    "vsync_handler.h",
    "vsync_handler.cc",
    "logger.h"
  ]
  
  libs = [
    "flutter_engine",
    "tdm-client"
  ]
}
